<resources>
    <string name="app_name">Weather</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="settings">settings</string>
    <string name="units">Units</string>
    <string name="weather_at_your_location">Weather at your location</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="save">save</string>
    <string name="permission_received">Permission to track the location has been received. If you are afraid, you can turn it off in the phone settings.</string>
    <string name="permission_not_received">We will not be able to show you the weather near you if there is no permission</string>
    <string-array name="units">
        <item>metric</item>
        <item>imperial</item>
        <item>standard</item>
    </string-array>
</resources>